# src/routes/auth.routes.js
@@ -8,5 +8,7 @@ const { loginSchema } = require("../validations/auth.validations");
 
 router.post('/register', validate(registerSchema), authController.register);
 router.post('/login',validate(loginSchema), authController.login);
+router.post("/forgot-password", authController.forgotPassword);
+router.post("/reset-password", authController.resetPassword);
 
 module.exports = router;
